<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DoYinCover</string>
    <string name="agreement">您已同意<u>《%1$s用户协议》</u></string>
    <string name="agreement_link">https://dkhsh5.ricebook.com/protocol.html</string>
    <string name="network_error_msg">网络错误</string>
    <string name="message_permission_rationale">Grant the following permissions to continue the program:\n\n%1$s</string>
    <string name="taobao_authorize">淘宝授权</string>
    <string name="use_date">使用期限：%1$s - %2$s</string>
    <string name="monthly_sale">月销 %1$s</string>
    <string name="search_hint_title">搜索商品名或粘贴淘宝商品标题</string>
    <string name="network_not_available">网络连接不可用</string>
    <string name="tip_address_count">最多保存 20 个收货地址</string>
    <string name="privacy_statement">登录代表你已同意<u>用户注册协议、用户隐私条款</u></string>
    <string name="no_network_hint">机房网线被柴犬咬断了，你敢信吗？</string>
    <string name="no_data_hint">没获取到最新数据</string>
    <string name="image_trans_name">image</string>
    <string name="video_trans_name">video</string>
    <string name="is_back_chains_publish">现在离开会丢失已编辑的视频内容，确定要走吗？</string>
    <string name="is_delete_feed">确定删除这个视频吗？</string>
    <string name="edit_nick_hint">6字以下的昵称更容易被记住</string>
    <string name="edit_bio_hint">输入你的个性签名更容易被关注哦</string>
    <string name="edit_nick_max_hint">已超出最大字数限制</string>
    <string name="edit_bio_max_hint">已超出最大字数限制</string>
    <string name="is_save_change">是否保存修改？</string>
    <string name="upload_avatar_success">头像上传成功</string>
    <string name="upload_avatar_fail">头像上传失败</string>
    <string name="info_save_success">资料保存成功</string>
    <string name="info_save_fail">资料保存失败</string>
    <string name="no_attention">暂无关注</string>
    <string name="no_attention_mine">喜欢TA就去关注嘛</string>
    <string name="no_attention_other">这宝宝谁也没关注</string>
    <string name="no_fans">暂无粉丝</string>
    <string name="no_fans_mine">呜呜，还没有粉丝呢</string>
    <string name="no_fans_other">快成为关注TA的第一人吧～</string>
    <string name="no_notify">暂无通知</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_confirm_2">确认</string>
    <string name="string_third_login">第三方登录</string>
    <string name="string_login_by_mobile">手机号登录</string>
    <string name="string_login_right_label">用户注册协议、用户隐私条款</string>
    <string name="string_no_bind_now">暂不绑定</string>
    <string name="string_valid_code_error">手机验证码错误</string>
    <string name="string_login_follow_up_master">登录关注更多优秀UP主</string>
    <string name="string_pull_show_add">下拉刷新查看最新动态</string>
    <string name="string_got_home">去首页看别的</string>
    <string name="str_video_hall_start_explore">开始探索</string>
    <string name="string_subscript_count">%1$s人订阅</string>
    <string name="string_video_hall_play_end_tips">这次放映结束了！   \n\n我们还筹备了其它放映厅，记得分享视 频可以触发秘钥。  \n\n你可以订阅这些话题看更多：</string>
    <string name="string_video_hall_subscript">订阅</string>
    <string name="strng_video_hall_key_error">错误的密钥，请重新输入</string>
    <string name="string_video_hall_key_help">如何获取秘钥？</string>
    <string name="string_video_hall_open">开启放映</string>
    <string name="string_input_key_hint">请输入秘钥</string>
    <string name="string_video_help_title">密钥指南</string>
    <string name="string_video_help_sub_title1">鸟站放映厅是什么？</string>
    <string name="string_video_help_content1">集中放送全站最厉害的视频，全是你爱看的，包场看到爽！拥有秘钥才能进入。</string>
    <string name="string_video_help_sub_title2">怎么得到密钥？</string>
    <string name="string_video_help_content2">分享视频就有可能触发相应密钥。好友通过你的分享链接下载刷刷看APP,触发概率翻倍。</string>
    <string name="string_video_help_sub_title3">我的密钥能分享给别人吗？</string>
    <string name="string_video_help_content3">一个密钥仅限5人分享，别浪费哟~</string>
    <string name="string_dialog_cancel_subscribe_title">取消订阅</string>
    <string name="string_dialog_cancel_subscribe_desc">确定不再订阅#%s吗？之后就不能第一时间看到这个话题的新动态了哦。</string>
    <string name="string_dialog_cancel_subscribe_negative">再想想</string>
    <string name="string_dialog_cancel_subscribe_positive">确定</string>
    <string name="string_dialog_cancel_follow_title">取消关注</string>
    <string name="string_dialog_cancel_follow_desc">确定不再关注@%s吗？之后就无法在关注页看到TA的动态了哦。</string>
    <string name="string_dialog_cancel_follow_negative">再想想</string>
    <string name="string_dialog_cancel_follow_positive">确定</string>
    <string name="string_address_manager">地址管理</string>
    <string name="string_dialog_confirm_address">确定选择该地址?</string>
    <string name="string_confirm">确定</string>
    <string name="string_please_choose">请选择</string>
    <string name="string_tips">提示</string>
    <string name="string_load_error">加载失败</string>
    <string name="string_save">保存</string>
    <string name="string_follow">关注</string>
    <string name="string_dialog_delete_address">是否删除地址</string>
    <string name="string_delete_ing">删除中</string>
    <string name="string_save_ing">保存中</string>
    <string name="string_solitaire">接龙</string>
    <string name="string_publish_update_ing_tips">你还有视频正在上传中，别急着发新的哦</string>
    <string name="string_net_unavailable">网络连接不可用</string>
    <string name="string_renew_send">重新发送</string>
    <string name="string_error_phone_input">请输入正确的手机号</string>
    <string name="string_code_has_send">验证码已发送</string>
    <string name="string_second_60">60秒</string>
    <string name="string_second_format">%1$d秒</string>
    <string name="string_code_send_error">短信验证码发送失败</string>
    <string name="string_publish_wait_edit">有作品正在上传，等待完成后再继续创作鸭</string>
    <string name="string_cancel">取消</string>
    <string name="string_upload_wait">上传中</string>
    <string name="string_solitaire_all">全部接龙</string>
    <string name="string_bind_phone_success">手机号绑定成功</string>
    <string name="string_minus_video_with_user">将为你减少此类视频</string>
    <string name="string_operating_error">操作失败</string>
    <string name="string_open_file_write">请开启访问文件权限</string>
    <string name="string_loading">加载中...</string>
    <string name="string_downloading">下载中...</string>
    <string name="string_download_failed">下载失败，稍后请重试</string>
    <string name="string_video_download_error_with_copyright">该视频由于版权原因无法下载</string>
    <string name="string_video_save_format">视频已保存至%1$s文件中</string>
    <string name="string_pic_save_format">图片已保存至%1$s文件中</string>
    <string name="string_confirm_change">确认修改</string>
    <string name="string_save_photo_success">已保存至本地相册</string>
    <string name="string_save_photo_error">保存失败</string>
    <string name="string_not_change_topic_error">已选定话题不可修改，\n可重新发布视频和选择话题哦</string>
    <string name="string_beyound_length">超出字数限制</string>
    <string name="string_no_have_video_title_error">不给你的视频写个标题吗？</string>
    <string name="string_can_not_find_vieo_error">视频不知道去哪鸭，选个话题吧</string>
    <string name="string_not_change_content_error">您没有修改任何内容</string>
    <string name="string_change_error">修改失败</string>
    <string name="string_un_subscription_success">取消订阅成功</string>
    <string name="string_un_subscription_error">取消订阅失败</string>
    <string name="string_subscription_success">订阅成功</string>
    <string name="string_subscription_error">订阅失败</string>
    <string name="string_subscription">订阅</string>
    <string name="string_has_subscription">已订阅</string>
    <string name="string_video_number_format">%1$s个视频</string>
    <string name="string_video_subscription_format">%1$s个订阅</string>
    <string name="string_subscription_format">%1$d&#160;订阅</string>
    <string name="string_video_subscription_people_format">%1$s人订阅</string>
    <string name="string_video_solitaire_format">%1$s个接龙</string>
    <string name="string_go_solitaire_tips">快去接龙吧，下一个推荐的就是你</string>
    <string name="string_send_face_with_wechat">作为表情发送给微信好友</string>
    <string name="string_share_pic_withwechat">分享图片给微信好友</string>
    <string name="string_share_pic_with_qq">分享图片给QQ好友</string>
    <string name="string_pic_max_length_error">图片大小超过限制无法发送</string>
    <string name="string_setting">设置</string>
    <string name="string_guide_permission">当前应用缺少必要权限，请点击“设置”-“权限”-打开所需权限</string>
    <string name="string_not_has_camera_permission_error">还有未授予刷刷的权限，是无法完成拍摄的，快去手机设置里开启授权，等你回来～</string>
    <string name="string_string_go_to_setting">去设置</string>
    <string name="string_video_create_error_format">糟糕，生成视频失败 code=%1$s</string>
    <string name="string_video_crop_error_format">糟糕，裁剪视频失败 code=%1$s</string>
    <string name="string_gif_error_format">糟糕，生成GIF失败 code=%1$s</string>
    <string name="string_craete_gif_ing">正在生成GIF...</string>
    <string name="string_create_video_crop">正在裁剪</string>
    <string name="string_create_face_package">制作表情包</string>
    <string name="string_video_crop_ing">裁切中...</string>
    <string name="string_edit_pic">编辑图片</string>
    <string name="string_pic_load_error">图片加载失败</string>
    <string name="string_content_has_to_board">内容已复制到粘贴板</string>
    <string name="string_logout_success">注销用户成功</string>
    <string name="string_please_stant_app">请重新启动app</string>
    <string name="string_video_path_error">视频路径错误</string>
    <string name="string_edit_address">编辑地址</string>
    <string name="string_please_input_user_address">请填写收货人姓名</string>
    <string name="string_please_input_phone">请填写手机号</string>
    <string name="string_please_input_detailed_address">请填写详细地址</string>
    <string name="string_please_input_correct_email">请输入正确的邮编</string>
    <string name="string_confirm_edit">确认放弃编辑吗？</string>
    <string name="string_data_saveing">资料保存中...</string>
    <string name="string_avatar_upload_ing">上传头像中...</string>
    <string name="string_change_profile_data">编辑资料</string>
    <string name="string_give_up">放弃</string>
    <string name="string_male">男</string>
    <string name="string_female">女</string>
    <string name="string_edit_signature">编辑签名</string>
    <string name="string_edit_nikename">编辑昵称</string>
    <string name="string_un_follow_error">取消关注失败</string>
    <string name="string_un_follow_success">取消关注成功</string>
    <string name="string_follow_error">关注失败</string>
    <string name="string_get_video_error">获取视频失败</string>
    <string name="string_long_press_face_package">长按制作表情包</string>
    <string name="string_attention_success">关注成功</string>
    <string name="string_attention_error">关注失败</string>
    <string name="string_filter_camomile">日剧</string>
    <string name="string_filter_cold">清秀</string>
    <string name="string_filter_habana">减龄</string>
    <string name="string_filter_lzp">自然</string>
    <string name="string_filter_happy">跳跃</string>
    <string name="string_filter_elegance">雅致</string>
    <string name="string_filter_harvest">深秋</string>
    <string name="string_filter_miss">橘子</string>
    <string name="string_filter_red">聚焦</string>
    <string name="string_filter_tasty">好味</string>
    <string name="string_filter_turkish">浓郁</string>
    <string name="string_filter_waltz">华尔兹</string>
    <string name="string_filter_west">午后</string>
    <string name="string_filter_print">胶片</string>
    <string name="string_filter_railway">地下铁</string>
    <string name="string_filter_retro">倒带</string>
    <string name="string_filter_1960s">年代</string>
    <string name="string_filter_gray">默片</string>
    <string name="string_edit">编辑</string>
    <string name="string_delete">删除</string>
    <string name="string_up_value_format">UP值&#160;%1$s</string>
    <string name="string_owner_follow">我关注的</string>
    <string name="string_other_follow">TA关注的</string>
    <string name="string_finish_label">完成</string>
    <string name="string_publish_label">发布</string>
    <string name="string_has_share_to_people">有什么想和沙雕网友分享的？</string>
    <string name="string_change_cover">更换封面</string>
    <string name="string_choose_cover">选封面</string>
    <string name="string_choose_topic">选择话题</string>
    <string name="string_filter_none">原画</string>
    <string name="string_heng_change_filter">横向切换滤镜</string>
    <string name="string_rotation_label">翻转</string>
    <string name="string_beautiful_face_label">美颜</string>
    <string name="string_filter_label">滤镜</string>
</resources>