<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/color_normal_2222222">

    <android.opengl.GLSurfaceView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/filter_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lineSpacingExtra="0sp"
                android:shadowColor="@color/black40"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:text="@string/string_filter_none"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="invisible" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="onBackClick"
            android:padding="15dp"
            android:src="@drawable/back_ic"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <com.flyco.roundview.RoundTextView
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_marginRight="15dp"
            android:lineSpacingExtra="0sp"
            android:onClick="onDoneClick"
            android:paddingBottom="8dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="8dp"
            android:text="@string/string_finish_label"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rv_backgroundColor="@color/color_ffef30"
            app:rv_cornerRadius="16dp" />

        <TextView
            android:id="@+id/filter_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_edit_sel_filter"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="0sp"
            android:onClick="onFilterClick"
            android:paddingBottom="7dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="7dp"
            android:text="@string/string_filter_label"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/chose_cover_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/ic_chose_cover"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="0sp"
            android:onClick="onChoseCover"
            android:paddingBottom="7dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="7dp"
            android:text="@string/string_choose_cover"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/filter_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chose_cover_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="onCloseChoseCover"
            android:padding="15dp"
            android:src="@drawable/ic_record_close"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:onClick="onSaveChoseCover"
            android:padding="15dp"
            android:src="@drawable/ic_edit_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.kuanquan.doyincover.publisher.ChoiceCover
            android:id="@+id/choice_cover"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="35dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
